# slr-kit

./: .gitignore  DocSim.py  MANIFEST.in  README.md  acronyms.py  analyze-occ.py  arguments.py  clear-postponed.py  cmp-terms.py  co-occurrences.py  copy-labels.py  cosine_similarity.py  cumulative-frequence.py  cumulative-frequency.py  docsim.py  dtm.py  embeddings.py  evaluate_clusters.py  fawoc.py  filter_paper.py  ga_param.toml  gen-n-grams-2.py  gen-n-grams.py  gen-td-idf.py  gen-terms.py  gen_terms.py  hierarchical-clustering.py  import_biblio.py  join_lda_info.py  journal_lister.py  kmeans.py  lda.py  lda_ga.py  lda_grid_search.py  lda_utils.py  match-occ-counts.py  match-words.py  mds.py  merge_labels.py  noise-stats.py  (+32 more)
WIP/: parse_pairings.py
default_stopwords/: custom_stopwords_en.txt
docs/: scripts.md
report_templates/: report_template.md  report_template.tex
slrkit/: acronyms.py  filter_paper.py  ga_param.toml  gen_terms.py  import_biblio.py  journal_lister.py  lda.py  lda_ga.py  lda_grid_search.py  postprocess.py  preprocess.py  ris_visualizer.py  schwartz_hearst.py  slrkit.py  stopword_extractor.py  topic_report.py  utils.py  version.py
slrkit/default_stopwords/: nltk_stopwords_en.txt
slrkit/report_templates/: report_template.md  report_template.tex
