[metadata]
name = slrkit
author = Tullio Facchinetti
author_email = tullio.facchinetti@unipv.it
python_requires = '>= 3.6'
summary = Tools to automatize systematic literature reviews
url = https://github.com/robolab-pavia/slrkit
license = GPL-3
classifiers =
	Programming Language :: Python :: 3
	Operating System :: OS Independent
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = slrkit
install_requires =
	pyparsing==2.2.1
	gensim
	matplotlib
	nltk
	numpy
	pandas
	RISparser
	regex
	psutil
	treetaggerwrapper
	fawoc
	tabulate
	Jinja2
	tomlkit
	deap
	GitPython
	slrkit-utils

include_package_data = True

[options.entry_points]
console_scripts =
    slrkit = slrkit.slrkit:main
    merge_labels = slrkit.merge_labels:main
    ris_visualizer = slrkit.ris_visualizer:main
