[metadata]
name = slrkit
version = 1.4.0
author = Tullio Facchinetti
author_email = tullio.facchinetti@unipv.it
summary = Tools to automatize systematic literature reviews
url = https://github.com/robolab-pavia/slrkit
license = GPL-3.0-or-later
classifiers =
	Programming Language :: Python :: 3
	Operating System :: OS Independent
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
python_requires = >=3.6
install_requires =
	pyparsing==2.2.1
	gensim
	matplotlib
	nltk
	numpy
	pandas
	rispy
	regex
	psutil
	treetaggerwrapper
	fawoc
	tabulate
	Jinja2
	tomlkit
	deap
	GitPython
	slrkit-utils

include_package_data = True

[options.entry_points]
console_scripts =
    slrkit = slrkit.slrkit:main
    merge_labels = slrkit.merge_labels:main
    ris_visualizer = slrkit.ris_visualizer:main
